@@ -1452,6 +1452,15 @@ name|success
 init|=
 literal|false
 decl_stmt|;
+specifier|final
+name|long
+name|startTime
+init|=
+name|Time
+operator|.
+name|monotonicNow
+argument_list|()
+decl_stmt|;
 try|try
 block|{
 name|bpNamenode
@@ -1487,6 +1496,21 @@ expr_stmt|;
 block|}
 finally|finally
 block|{
+name|dn
+operator|.
+name|getMetrics
+argument_list|()
+operator|.
+name|addIncrementalBlockReport
+argument_list|(
+name|Time
+operator|.
+name|monotonicNow
+argument_list|()
+operator|-
+name|startTime
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 operator|!
